--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.gtapp">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_gt"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_gt"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -35,6 +39,10 @@
             android:name=".EditActivity" />
 
         <activity android:name=".CursoresActivity" />
+
+        <service android:name=".NotificationService" />
+        <receiver android:name=".AlarmReceiver"/>
+
     </application>
 
 </manifest>
